<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="25dp">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasilospf"
            android:id="@+id/buttonOSPF" android:layout_gravity="center_horizontal"/>

    <Button

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/interfaceshow"
            android:id="@+id/buttonIPInterface" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:id="@+id/buttonCost" android:layout_gravity="center_horizontal"/>
</LinearLayout>